# hermetic

./: .gitignore  AGENT.md  FILE_STRUCTURE.md  README.md  opencode.json.example  watch.sh
.github/workflows/: main.yml  release.yml
.opencode/skills/pocketbase-mcp/: SKILL.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/hermetic/app/: HermeticApp.kt  MainActivity.kt
android/app/src/main/java/com/hermetic/app/auth/: AuthManager.kt
android/app/src/main/java/com/hermetic/app/di/: HiltApiEntryPoint.kt  NetworkModule.kt
android/app/src/main/java/com/hermetic/app/fcm/: FCMService.kt
android/app/src/main/java/com/hermetic/app/updater/: UpdateManager.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  updater.py
backend/app/agent/: context.py  engine.py  prompts.py
backend/app/api/: routes.py  schemas.py
backend/app/db/: client.py
backend/app/mcp/: manager.py
backend/app/middleware/: auth.py
backend/app/providers/: models_catalog.py  schemas.py  service.py  tokenizer.py
backend/app/services/: notifier.py
backend/app/skills/: registry.py  schemas.py
backend/app/tools/: files.py  git.py  terminal.py
deploy/: pb_schema.json
docs/: android-structure.md  backend-routes.md  deployment.md  pocketbase-schema.md  project-overview.md
(+17 files in other folders)
